<resources>
    <string name="app_name">User Profile</string>
    <string name="appName">User Profile Kotlin</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="description">Description</string>
    <string name="openGall">Open Picture Gallery</string>
    <string name="confirm">Confirm</string>
    <string name="profilePic">Profile Picture</string>
    <string name="name">%1$s %2$s</string>
</resources>
